[project]
name = "rf-detr-onnx"
version = "0.1.0"
description = "Scripts to use ONNX version of FR-DETR"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "onnxruntime>1.17",
    "pillow"
]

[project.optional-dependencies]
export-tools = ["rfdetr==1.3.0", "rfdetr[onnxexport]==1.3.0"]
